src/objects/CventEvents__RecordMatchingCriteria__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the Cvent - SF record matching criteria.</description>
    <fields>
        <fullName>CventEvents__CventField__c</fullName>
        <description>Attendee Temp field API name used for mapping.</description>
        <inlineHelpText>Attendee Temp field API name used for mapping.</inlineHelpText>
        <label>Cvent Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Object__c</fullName>
        <description>Salesforce target object name used for mapping.</description>
        <inlineHelpText>Salesforce target object name used for mapping.</inlineHelpText>
        <label>Object</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__SalesforceField__c</fullName>
        <description>Account/Contact/Lead field API name used for mapping.</description>
        <inlineHelpText>Account/Contact/Lead field API name used for mapping.</inlineHelpText>
        <label>Salesforce Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Record Matching Criteria</label>
</CustomObject>